--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <img src="images/ivan.jpg" alt="My picture">
         <h1>Iván Krasowski Bissio</h1>
-        <a href="http://validator.w3.org/check/referer">
+        <a href="http://validator.w3.org/check/referer"
+            onclick="this.href='http://validator.w3.org/check?uri=' + 
+            document.URL">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="validate"/>
         </a>
 
