--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <meta charset="utf-8"/>
         <title>Iván Krasowski Bissio</title>
@@ -7,9 +7,7 @@
     <body>
         <img src="images/ivan.jpg" alt="My picture">
         <h1>Iván Krasowski Bissio</h1>
-        <a href="http://validator.w3.org/check/referer"
-            onclick="this.href='http://validator.w3.org/check?uri=' + 
-            document.URL">
+        <a href="http://validator.w3.org/check/referer">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="validate"/>
         </a>
 
