--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>Iván Krasowski Bissio</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="main-list.css">
     </head>
     <body>
-        <img src="images/ivan.jpg" alt="My picture">
-        <h1>Iván Krasowski Bissio</h1>
-        <a href="http://validator.w3.org/check/referer">
-            <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="validate"/>
-        </a>
+        <header>
+            <h1>
+                <a href="#"><!-- TODO: add link to homepage -->
+                    <img class="profile-img" src="images/ivan.jpg" alt="My picture" />
+                </a>
+                <br/>
+                Iván Krasowski Bissio
+            </h1>
+            <div>
+                <a href="http://validator.w3.org/check/referer">
+                    <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Valid HTML!"/>
+                </a>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
+                </a>
+            </div>  
+        </header>
 
-        <ul>
-            <li>Homepage</li>
-            <!-- <li>About me</li>
-            <li>Recipe</li>
-            <li>Movie Review</li>
-            <li>MP3 Library</li>
-            <li></li> -->
-        </ul>
+        <div class="pages-list">
+            <ul class="main-list">
+                <li class="main-elem"><a href="#">Homepage</a></li>
+                <li class="main-elem"><a href="#">About me</a></li>
+                <!-- <li class="main-elem">Recipe</li>
+                <li class="main-elem">Movie Review</li>
+                <li class="main-elem">MP3 Library</li>
+                <li class="main-elem"></li> -->
+            </ul>
+        </div>
     </body>
 </html>
