Day 2 - Lab 2 complete but additional

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <title>Iván Krasowski Bissio</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="main-list.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/main-list.css">
     </head>
     <body>
         <header>
@@ -28,7 +28,7 @@
         <div class="pages-list">
             <ul class="main-list">
                 <li class="main-elem"><a href="#">Homepage</a></li>
-                <li class="main-elem"><a href="#">About me</a></li>
+                <li class="main-elem"><a href="about/">About me</a></li>
                 <!-- <li class="main-elem">Recipe</li>
                 <li class="main-elem">Movie Review</li>
                 <li class="main-elem">MP3 Library</li>
