--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,10 @@
                 Iván Krasowski Bissio
             </h1>
             <div>
-                <a href="http://validator.w3.org/check/referer">
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%2Fabout%2F">
                     <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Valid HTML!"/>
                 </a>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="http://jigsaw.w3.org/css-validator/check/https%3A%2F%2Fivankras.github.io%2Fabout%2F">
                     <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
                 </a>
             </div>  
