--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%2F">
                     <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Valid HTML!"/>
                 </a>
-                <a href="http://jigsaw.w3.org/css-validator/check/https%3A%2F%2Fivankras.github.io%2F">
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fivankras.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                     <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
                 </a>
             </div>  
@@ -29,8 +29,8 @@
             <ul class="main-list">
                 <li class="main-elem"><a href="#">Homepage</a></li>
                 <li class="main-elem"><a href="about/">About me</a></li>
-                <!-- <li class="main-elem">Recipe</li>
-                <li class="main-elem">Movie Review</li>
+                <li class="main-elem"><a href="recipe/">Pie Recipe</a></li>
+                <!--li class="main-elem">Movie Review</li>
                 <li class="main-elem">MP3 Library</li>
                 <li class="main-elem"></li> -->
             </ul>
