--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Iván Krasowski Bissio</title>
+        <link rel="icon" type="image/png" href="../favicon.png"/>
         <link rel="stylesheet" href="../css/index.css">
         <link rel="stylesheet" href="css/about.css">
     </head>
