--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8"/>
         <title>Iván Krasowski Bissio</title>
+        <link rel="icon" type="image/png" href="favicon.png"/>
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/main-list.css">
     </head>
     <body>
         <header>
             <h1>
-                <a href="#"><!-- TODO: add link to homepage -->
+                <a href="#">
                     <img class="profile-img" src="images/ivan.jpg" alt="My picture" />
                 </a>
                 <br/>
