Day 3 - Movie Review

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <li class="main-elem"><a href="#">Homepage</a></li>
                 <li class="main-elem"><a href="about/">About me</a></li>
                 <li class="main-elem"><a href="recipe/">Pie Recipe</a></li>
-                <!--li class="main-elem">Movie Review</li>
-                <li class="main-elem">MP3 Library</li>
+                <li class="main-elem"><a href="movie/">Movie Review</a></li>
+                <!--li class="main-elem">MP3 Library</li>
                 <li class="main-elem"></li> -->
             </ul>
         </div>
