--- a/movie/index.html
+++ b/movie/index.html
@@ -13,7 +13,7 @@
 		=> this came with other problems (now I have everything ordered in columns, so I need to push the 33% up and the "(1-10) of 88" down)
 		=> structuring better the containers, the solution came by itself
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>TMNT - Rancid Tomatoes</title>
 
