--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <li class="main-elem"><a href="about/">About me</a></li>
                 <li class="main-elem"><a href="recipe/">Pie Recipe</a></li>
                 <li class="main-elem"><a href="movie/">Movie Review</a></li>
+                <li class="main-elem"><a href="responsive/flex/">Responsive - Flexbox</a></li>
+                <li class="main-elem"><a href="responsive/bootstrap/">Responsive - Bootstrap</a></li>
                 <!--li class="main-elem">MP3 Library</li>
                 <li class="main-elem"></li> -->
             </ul>
