--- a/responsive/flex/index.html
+++ b/responsive/flex/index.html
@@ -14,7 +14,7 @@
         </header>
         <body>
             <div class="navbar">
-                <a href="#">Menu1</a>
+                <a href="/">Homepage</a>
                 <a href="#">Menu2</a>
                 <a href="#">Menu3</a>
             </div>
