--- a/responsive/bootstrap/index.html
+++ b/responsive/bootstrap/index.html
@@ -16,10 +16,10 @@
         <body>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div class="navbar-expand navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Menu1</a>
+                                <a class="nav-link" href="/">Homepage</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Menu2</a>
