--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li class="main-elem"><a href="movie/">Movie Review</a></li>
                 <li class="main-elem"><a href="responsive/flex/">Responsive - Flexbox</a></li>
                 <li class="main-elem"><a href="responsive/bootstrap/">Responsive - Bootstrap</a></li>
+                <li class="main-elem"><a href="js-intro/">Intro to JS</a></li>
                 <!--li class="main-elem">MP3 Library</li>
                 <li class="main-elem"></li> -->
             </ul>
