--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li class="main-elem"><a href="responsive/flex/">Responsive - Flexbox</a></li>
                 <li class="main-elem"><a href="responsive/bootstrap/">Responsive - Bootstrap</a></li>
                 <li class="main-elem"><a href="js-intro/">Intro to JS</a></li>
-                <!--li class="main-elem">MP3 Library</li>
-                <li class="main-elem"></li> -->
+                <li class="main-elem"><a href="decorate/">Decorate my Text</a></li>
+                <!-- <li class="main-elem"><a href="ascii/">ASCII Animation</a></li> -->
             </ul>
         </div>
     </body>
