Day 6 - JS Timers and more

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="main-elem"><a href="responsive/bootstrap/">Responsive - Bootstrap</a></li>
                 <li class="main-elem"><a href="js-intro/">Intro to JS</a></li>
                 <li class="main-elem"><a href="decorate/">Decorate my Text</a></li>
-                <!-- <li class="main-elem"><a href="ascii/">ASCII Animation</a></li> -->
+                <li class="main-elem"><a href="ascii/">ASCII Animation</a></li>
             </ul>
         </div>
     </body>
