--- a/ascii/index.html
+++ b/ascii/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/ascii.css" type="text/css" rel="stylesheet">
 		<link href="css/textarea.css" type="text/css" rel="stylesheet">
-		<script src="js/animations.js" type="text/javascript"></script>
-		<script src="js/ascii.js" type="text/javascript"></script>
+		<script src="js/animations.js"></script>
+		<script src="js/ascii.js"></script>
     </head>
 	
     <body>
