--- a/decorate/index.html
+++ b/decorate/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Text Decorator</title>
         <link href="css/index.css" type="text/css" rel="stylesheet" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-		<script src="js/utils.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="js/utils.js"></script>
     </head>
     <body>
         
