Day 6 - JS Timers and more

--- a/ascii/index.html
+++ b/ascii/index.html
@@ -45,6 +45,10 @@
 				<legend>Speed:</legend>
 				<label><input id="turbo" type="checkbox">Turbo</label>
 			</fieldset>
+			<fieldset>
+				<legend>Exit</legend>
+				<button id="homepage"><a href="/">Homepage</a></button>
+			</fieldset>
 		</div>
         <div id="validate">
 			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%ascii%2F">
