--- a/decorate/index.html
+++ b/decorate/index.html
@@ -24,6 +24,7 @@
             <fieldset>
                 <legend>Decoration</legend>
 
+                <button id="homepage"><a href="/">Homepage</a></button>
                 <button id="bigger">Bigger Decorations!</button>
                 <br/>
                 <label for="bling">Bling</label>
