Day 6 - JS Timers and more

--- a/ascii/index.html
+++ b/ascii/index.html
@@ -46,7 +46,7 @@
 				<label><input id="turbo" type="checkbox">Turbo</label>
 			</fieldset>
 			<fieldset>
-				<legend>Exit</legend>
+				<legend>Exit:</legend>
 				<button id="homepage"><a href="/">Homepage</a></button>
 			</fieldset>
 		</div>
