--- a/ascii/index.html
+++ b/ascii/index.html
@@ -51,15 +51,13 @@
 			</fieldset>
 		</div>
         <div id="validate">
-			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%ascii%2F">
-				<img src="w3c-html.png" alt="html validator">
-            </a><br>
-			<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fivankras.github.io%2Fascii%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-                <img src="w3c-css.png" alt="Valid CSS!"></a><br>
-            <!-- <a href="http://webster.cs.washington.edu/jslint?referer">
-				<img src="jslint.png" alt="JavaScript Lint">
-			</a> -->
-        </div>
+			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%2Fdecorate%2Fascii%2F">
+				<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Valid HTML!"/>
+			</a>
+			<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fivankras.github.io%2Fascii%2Fdecorate%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+				<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
+			</a>
+		</div>
 
     
 
