--- a/ascii/index.html
+++ b/ascii/index.html
@@ -51,10 +51,10 @@
 			</fieldset>
 		</div>
         <div id="validate">
-			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%2Fdecorate%2Fascii%2F">
+			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fivankras.github.io%2Fascii%2F">
 				<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Valid HTML!"/>
 			</a>
-			<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fivankras.github.io%2Fascii%2Fdecorate%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+			<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fivankras.github.io%2Fascii%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 				<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
 			</a>
 		</div>
