Day 6 - JS Timers and more

--- a/ascii/index.html
+++ b/ascii/index.html
@@ -47,7 +47,7 @@
 			</fieldset>
 			<fieldset>
 				<legend>Exit:</legend>
-				<button id="homepage"><a href="/">Homepage</a></button>
+				<a href="/"><button id="homepage">Homepage</button></a>
 			</fieldset>
 		</div>
         <div id="validate">
