--- a/decorate/index.html
+++ b/decorate/index.html
@@ -24,7 +24,7 @@
             <fieldset>
                 <legend>Decoration</legend>
 
-                <button id="homepage"><a href="/">Homepage</a></button>
+                <a href="/"><button id="homepage">Homepage</button></a>
                 <button id="bigger">Bigger Decorations!</button>
                 <br/>
                 <label for="bling">Bling</label>
