Day 6 - JS Timers and more

--- a/decorate/index.html
+++ b/decorate/index.html
@@ -24,7 +24,7 @@
             <fieldset>
                 <legend>Decoration</legend>
 
-                <a href="/"><button id="homepage">Homepage</button></a>
+                <button id="homepage">Homepage</button>
                 <button id="bigger">Bigger Decorations!</button>
                 <br/>
                 <label for="bling">Bling</label>
