--- a/ascii/index.html
+++ b/ascii/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>ASCIImation</title>
@@ -47,7 +47,7 @@
 			</fieldset>
 			<fieldset>
 				<legend>Exit:</legend>
-				<a href="/"><button id="homepage">Homepage</button></a>
+				<button id="homepage">Homepage</button>
 			</fieldset>
 		</div>
         <div id="validate">
