Day 7 - Functional JS, regexp

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="main-elem"><a href="js-intro/">Intro to JS</a></li>
                 <li class="main-elem"><a href="decorate/">Decorate my Text</a></li>
                 <li class="main-elem"><a href="ascii/">ASCII Animation</a></li>
+                <li class="main-elem"><a href="functional/">Functional JS + Mocha</a></li>
+                <li class="main-elem"><a href="regexp/simpleBS/">Regexp - Form</a></li>
+                <li class="main-elem"><a href="regexp/golden-dome/">Regexp - Golden Dome</a></li>
             </ul>
         </div>
     </body>
