--- a/regexp/golden-dome/index.html
+++ b/regexp/golden-dome/index.html
@@ -102,8 +102,8 @@
                     </div>
                 </div>
                 <div class="col buttons">
-                    <button type="submit" class="btn btn-outline-secondary">Reset</button>
-                    <button class="btn btn-outline-danger">Cancel</button>
+                    <button type="reset" class="btn btn-outline-secondary">Reset</button>
+                    <button type="reset" id="cancel" class="btn btn-outline-danger">Cancel</button>
                     <button type="submit" class="btn btn-outline-primary">Add Product</button>
                 </div>
             </form>
