--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li class="main-elem"><a href="functional/">Functional JS + Mocha</a></li>
                 <li class="main-elem"><a href="regexp/simpleBS/">Regexp - Form</a></li>
                 <li class="main-elem"><a href="regexp/golden-dome/">Regexp - Golden Dome</a></li>
+                <li class="main-elem"><a href="inheritance/">Inheritance + Mocha</a></li>
             </ul>
         </div>
     </body>
