Day 11 - JS classes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li class="main-elem"><a href="regexp/simpleBS/">Regexp - Form</a></li>
                 <li class="main-elem"><a href="regexp/golden-dome/">Regexp - Golden Dome</a></li>
                 <li class="main-elem"><a href="inheritance/">Inheritance + Mocha</a></li>
+                <li class="main-elem"><a href="classes/">Classes</a></li>
             </ul>
         </div>
     </body>
