--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li class="main-elem"><a href="regexp/golden-dome/">Regexp - Golden Dome</a></li>
                 <li class="main-elem"><a href="inheritance/">Inheritance + Mocha</a></li>
                 <li class="main-elem"><a href="classes/">Classes</a></li>
+                <li class="main-elem"><a href="circles/">jQuery Circles</a></li>
             </ul>
         </div>
     </body>
