--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li class="main-elem"><a href="inheritance/">Inheritance + Mocha</a></li>
                 <li class="main-elem"><a href="classes/">Classes</a></li>
                 <li class="main-elem"><a href="circles/">jQuery Circles</a></li>
+                <li class="main-elem"><a href="maze/">Maze</a></li>
             </ul>
         </div>
     </body>
